--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "muibox",
-  "version": "1.2.1",
+  "version": "1.2.0",
   "description": "Promise-based dialog boxes (alert, confirm, prompt) using Material-UI",
   "main": "lib/index.js",
   "scripts": {
@@ -53,7 +53,7 @@
     "react-dom": "^16.8.2"
   },
   "peerDependencies": {
-    "@material-ui/core": "^1.0.0 || ^3.0.0",
+    "@material-ui/core": "^1.0.0 || ^3.0.0 || ^4.0.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   },
