--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^3.7.1",
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "@storybook/addon-actions": "^4.1.3",
     "@storybook/react": "^4.1.3",
     "babel-eslint": "^10.0.1",
