--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,23 @@
 {
-  "parser": "babel-eslint",
-  "extends": ["standard", "standard-react"],
+  "env": { "browser": true, "es2020": true },
+  "parser": "@babel/eslint-parser",
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime"
+  ],
+  "settings": {
+    "react": {
+      "version": "18.3.1"
+    }
+  },
+  "plugins": ["react-refresh", "import"],
+  "parserOptions": {    
+    "ecmaVersion": 2018
+  },
   "rules": {
     "jsx-quotes": "off",
-    "react/no-did-update-set-state": "off"
+    "react/no-did-update-set-state": "off",
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
   }
 }
