--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "muibox",
-  "version": "2.0.0",
+  "version": "2.1.0",
+  "type": "module",
   "description": "Promise-based dialog boxes (alert, confirm, prompt) using Material-UI",
   "main": "lib/index.js",
   "scripts": {
@@ -8,7 +9,8 @@
     "build-storybook": "build-storybook -c .storybook -o docs",
     "prebuild": "rimraf lib",
     "build": "babel src -d lib",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "lint": "eslint ./src --ext js,jsx"
   },
   "files": [
     "lib"
@@ -31,38 +33,37 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "7.25.9",
     "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.1",
-    "@mui/styles": "^5.0.1",
+    "@babel/preset-react": "^7.9.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@mui/styles": "^5.16.7",
     "@storybook/addon-actions": "^4.1.3",
     "@storybook/react": "^4.1.3",
-    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "eslint": "^5.3.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-standard": "^3.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "rimraf": "^6.0.1"
   },
   "peerDependencies": {
-    "@mui/material": "^5.0.0",
-    "@mui/styles": "^5.0.0",
-    "react": "^17.0.2",
-    "react-dom": "17.0.2"
+    "@mui/material": "^5.16.7",
+    "@mui/styles": "^5.16.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.25.9",
+    "muibox": "file:",
     "prop-types": "^15.7.2"
-  }
+  },
+  "packageManager": "pnpm@9.12.3"
 }
