--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "muibox",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Promise-based dialog boxes (alert, confirm, prompt) using Material-UI",
   "main": "lib/index.js",
   "scripts": {
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/eslint-parser": "^7.25.9",
     "@babel/plugin-transform-react-jsx": "7.25.9",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.9.0",
@@ -60,9 +61,14 @@
     "react-dom": "^18.3.1"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.25.9",
-    "muibox": "file:",
     "prop-types": "^15.7.2"
   },
-  "packageManager": "pnpm@9.12.3"
+  "overrides": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "resolutions": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
