--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "build-storybook": "build-storybook -c .storybook -o docs",
+    "build:storybook": "build-storybook -c .storybook -o docs",
+    "deploy:storybook": "gh-pages -d docs",
     "prebuild": "rimraf lib",
     "build": "babel src -d lib",
     "prepublish": "npm run build",
@@ -52,6 +53,7 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "release-it": "^17.10.0",
